workspace = { members = [
    "hello_cargo",
    "variables",
    "variables_shadowing",
    "floating_point",
    "boolean_types", 
    "character_type", 
    "compound_types", 
    "array_type",
    ] }
[package]
name = "rustprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
