workspace = { members = [
    "hello_cargo",
    "variables",
    "variables_shadowing",
    "floating_point",
    "boolean_types", 
    "character_type", 
    "compound_types", 
    "array_type", 
    "functions", 
    "functions_parameters", 
    "functions_mult_parameters", 
    "fn_statements_expressions", 
    "functions_return", 
    "if_expressions", 
    "multiple_else_if", 
    "if_in_let", 
    "loops", 
    "multiple_loops", 
    "conditional_loops_while", 
    "loop_collection_for",
    ] }
[package]
name = "rustprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
