workspace = { members = [
    "hello_cargo",
    "variables",
    "variables_shadowing",
    "floating_point",
    "boolean_types", 
    "character_type", 
    "compound_types", 
    "array_type", 
    "functions", 
    "functions_parameters", 
    "functions_mult_parameters", 
    "fn_statements_expressions", 
    "functions_return", 
    "if_expressions", 
    "multiple_else_if", 
    "if_in_let", 
    "loops", 
    "multiple_loops", 
    "conditional_loops_while", 
    "loop_collection_for", 
    "guessing_game", 
    "ownership_rules", 
    "ownership_pt2", 
    "rust_calculator", 
    "ownership_and_functions", 
    "transferring_ownership", 
    "port_sniffer", 
    "three_dice_game", 
    "calculate_sum", 
    "port_sniffer2",
    "mutable_references",
    ] }
[package]
name = "rustprojects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
rand = "0.8.5"
